add: update for workloads when pressed on row feat: snackbar alerts users (currently only implemented on workload creation / update)
